syntax = "proto3";

package apis;

message SendParams {
    string contact = 1;
    string topic = 2;
    string message = 3;
}

message UpdateConfigParams {
    map<string, string> configs = 1;
}

message UseridByMobileParams {
   string mobile = 1;
}

message BaseReply {
    bool success = 1;
    string msg = 2;
}

message UseridByMobileReply {
    string userid = 1;
}

service SendAgent {
    rpc Send(SendParams) returns (BaseReply)
    rpc UpdateConfig(UpdateConfigParams) returns (BaseReply)
    rpc UseridByMobile(UseridByMobileParams) returns (UseridByMobileReply)
}
